configs/sanbox/1_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask 
spec:
  selector:
    matchLabels:
      app: flask
  replicas: 1 
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: flask:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
