configs/sanbox/2_service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask 
spec:
  selector:
    app: flask
  ports:
  - protocol: "TCP"
    port: 6000
    targetPort: 5000
  type: LoadBalancer
